// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip content is TooltipContent with title, overrides title of TooltipContent: Similar to <Body>Some custom content</Body> 1`] = `
<body_Body
  tag="span"
>
  Some custom content
</body_Body>
`;

exports[`Tooltip content is TooltipContent with title, sets title of TooltipContent: Similar to <HeadingSmall>Some custom content</HeadingSmall> 1`] = `
<heading_small_HeadingSmall
  tag="h4"
>
  Some custom content
</heading_small_HeadingSmall>
`;

exports[`Tooltip content is TooltipContent with title, sets title of TooltipContent: Similar to <HeadingSmall>Title</HeadingSmall> 1`] = `
<heading_small_HeadingSmall
  tag="h4"
>
  Title
</heading_small_HeadingSmall>
`;

exports[`Tooltip content is TooltipContent without title, renders content as-is: <Body>Some custom content</Body> 1`] = `
<body_Body
  tag="span"
>
  Some custom content
</body_Body>
`;

exports[`Tooltip content is a string, wraps in TooltipContent with title: Similar to <TooltipContent title="Title">Content</TooltipContent> 1`] = `
<TooltipContent
  title="Title"
>
  Content
</TooltipContent>
`;

exports[`Tooltip content is a string, wraps in TooltipContent without title: Similar to <TooltipContent>Content</TooltipContent> 1`] = `
<TooltipContent>
  Content
</TooltipContent>
`;
